--- a/setting.tex
+++ b/setting.tex
@@ -2,6 +2,7 @@
 
 
 %%%%% Packages %%%%%
+
 \usepackage{bxdpx-beamer}
 \usepackage{pxjahyper}
 \usepackage{tikz}
@@ -15,6 +16,7 @@
 \usepackage{graphics}
 \usepackage{hyperref}
 \usepackage{fancybox}
+\usepackage{ascmac}
 
 
 %%%%% Settings %%%%%
@@ -166,7 +168,7 @@
 \newcommand{\tb}[1]{#1}
 \newcommand{\notes}[1]{{\footnotesize\\※#1}}
 \newcommand{\db}[1]{\doublebox{#1}}
-\newcommand{\hlink}[2]{\hyperlink{#1}{\underline{#2} }}
+\newcommand{\hlink}[2]{\hyperlink{#1}{\underline{#2}}}
 \setlength{\fboxsep}{0.4mm}
 \newcommand{\desc}[2]{\textbf{\doublebox{#1}: }#2}
 \newcommand{\full}[1]{
