--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/responce_time_analysis.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/responce_time_analysis.tex
@@ -4,48 +4,28 @@
 \section{RESPONSE TIME ANALYSIS}
 \label{sec: responce_time_analysis}
 
-
 \begin{frame}{表記法}
     \begin{itemize}
-        \item 明示的に指定されていない限り, インデックスを削除し, \db{$J$} を使用して分析対象のチェーンを示す
-        \item $J$ は時刻 \db{$r$} でリリースされ, 時刻 \db{$f$} で終了する
-        \item \db{$r_{i}$} でリリースされ, \db{$s_{i}$} で実行を開始する $J$ の $i$ 番目のコールバックインスタンスを \db{$c_{i}$} で表す
-              \begin{itemize}
-                  \item $i\in[1,|\mathcal{C}|]$
-                  \item \db{$|\mathcal{C}|$}: $\mathcal{C}$内のコールバックの数
-              \end{itemize}
-        \item $\mathcal{C}$ 以外の全てのチェーンは干渉チェーンと見なす
+        \item 明示的に指定されていない限り, インデックスを削除し, $J$ を使用して分析対象のチェーンを示す
+        \item $J$ 以外の全てのチェーンは干渉チェーンと見なす
     \end{itemize}
 \end{frame}
 
-\begin{frame}{問題ウィンドウ}
+\begin{frame}{分析対象の時間間隔}
     \begin{itemize}
         \item 本論文の意図は, 干渉チェーンからのワークロードによって遅延された $J$ 内のコールバックインスタンスがデッドラインに間に合わない可能性があるかを判断すること
-        \item この観点から, \tb{時間間隔 $\left[r, \min \left\{s_{|\mathcal{C}|}, r+D\right\}\right)$ を $J$ の\al{問題ウィンドウ}とし,}\\ \tb{問題ウィンドウ中の $J$ のコールバックインスタンスの実行に焦点を当てる}
-        \item 具体的には, $J$ 内の各コールバックインスタンス $c_{i}$ を $r+D$ までのリリース時刻で検討し, チェーンの干渉によって遅延する可能性のある時間の長さを分析する
+        \item この観点から, \tb{時間間隔 $\left[r, \min \left\{s_{|J|}, r+D\right\}\right)$ を $J$ の\al{問題ウィンドウ}とし,}\\ \tb{問題ウィンドウ中の $J$ のコールバックインスタンスの実行に焦点を当てる}
     \end{itemize}
-\end{frame}
-
-\begin{frame}{以降の流れ}
-    \begin{enumerate}
-        \item $R(J)$の境界問題を各干渉チェーン $\mathcal{C}_{k}$ に関連する $\mathcal{Q}_{k}$ の境界問題に帰着させる手法を開発
-              \begin{itemize}
-                  \item $\mathcal{Q}_{k}$ は$\mathcal{C}_{k}$の実行が$J$の終了時間に与える影響を特徴付けるために開発した項
-              \end{itemize}
-        \item 各 $\mathcal{C}_{k}$ の $\mathcal{Q}_{k}$ を制限
-        \item 上記の結果を組み合わせて, スケジューリング可能性と応答時間の分析を実行するアルゴリズムを開発
-    \end{enumerate}
 \end{frame}
 
 
 \subsection{preparation}
 \label{ssec: preparation}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item ROS 2 ではコールバックインスタンスはバッチでスケジュールされ, 各コールバックインスタンスはノンプリエンプティブに実行されるため, \al{干渉チェーン}が $J$ のコールバックインスタンスの実行に干渉する可能性がある
-        \item 以下ではまず, $J$ のコールバックインスタンスの実行を遅らせる可能性のある干渉チェーンからのワークロードを特定する
-    \end{itemize}
+\begin{frame}{セクションサマリ}
+    \begin{itembox}[l]{\textbf{目的}}
+        $J$ のコールバックインスタンスの実行を遅らせる可能性のある干渉チェーンからのワークロードを特定する
+    \end{itembox}
 \end{frame}
 
 \begin{frame}{以降で使用される仮定}
@@ -57,7 +37,7 @@
 
 \begin{frame}{仮定から導かれること}
     \begin{itemize}
-        \item  $r+D$ より前のデッドラインを持つ全てのチェーンインスタンスはスケジュール可能であると仮定されるため, 明らかに, 同じ干渉チェーンの最大 1 つのコールバックインスタンスが $[r, r+D)$ でいつでも実行される
+        \item  $r+D$ より前のデッドラインを持つ全てのチェーンインスタンスはスケジュール可能であると仮定されるため, 自明に, 同じ干渉チェーンの最大 1 つのコールバックインスタンスが $[r, r+D)$ でいつでも実行される
         \item したがって, 干渉チェーン $\mathcal{C}_{k}$ の全てのコールバックインスタンスは, $\left[r_{i}, s_{i}\right)$ 中に順次実行する必要がある
     \end{itemize}
 \end{frame}
@@ -65,7 +45,6 @@
 \begin{frame}{サブ干渉シーケンス}
     \begin{definition}[サブ干渉シーケンス]
         $\mathcal{C}_{k}$ から $c_{i}$ へのサブ干渉シーケンス $\mathcal{S}_{k, i}=\left\langle e_{k, a}^{\prime}, e_{k, b}^{\prime}, \cdots\right\rangle$ は, \\$\left[r_{i}, s_{i}\right)$ の間に実行された $\mathcal{C}_{k}$ のコールバックインスタンスの実行時間シーケンスである
-            \notes{\db{$e_{k, a}^{\prime}$}: コールバックインスタンス $c_{k, a}$ が $\left[r_{i}, s_{i}\right)$ の間に実行された時間の長さ}
             \notes{$r_{i}=s_{i}$ の場合は $\mathcal{S}_{k, i}=\langle 0\rangle$}
     \end{definition}
     \vspace{5mm}
@@ -96,19 +75,26 @@
 \end{frame}
 
 \begin{frame}{干渉作業の分割}
+    \vspace{-1mm}
     $c_{i}$ の状態に応じて, $\mathcal{I}_{k, i}$ を以下 3 つに分割する
-    \begin{itemize}
-        \item \desc{$\mathcal{I}_{k, i}^{\mathcal{P}}$}{\\$c_{i}$ がブロックされている間に, $c_{i}$ と同じコールバックグループに属す $\mathcal{C}_{k}$ のコールバックインスタンスが実行された合計時間}
-        \item \desc{$\mathcal{I}_{k, i}^{\mathcal{E}}$}{\\$c_{i}$ がブロックされている間に, $c_{i}$ と異なるコールバックグループに属す $\mathcal{C}_{k}$ のコールバックインスタンスが実行された合計時間}
-        \item \desc{$\mathcal{I}_{k, i}-\mathcal{I}_{k, i}^{\mathcal{P}}-\mathcal{I}_{k, i}^{\mathcal{E}}$}{その他の $\mathcal{C}_{k}$ から $c_{i}$ への干渉作業}
-    \end{itemize}
+    \vspace{-1mm}
+    \begin{block}{$\mathcal{I}_{k, i}^{\mathcal{P}}$}
+        $c_{i}$ がブロックされている間に, $c_{i}$ と同じコールバックグループに属す $\mathcal{C}_{k}$ のコールバックインスタンスが実行された合計時間
+    \end{block}
+    \begin{block}{$\mathcal{I}_{k, i}^{\mathcal{E}}$}
+        $c_{i}$ がブロックされている間に, $c_{i}$ と異なるコールバックグループに属す $\mathcal{C}_{k}$ のコールバックインスタンスが実行された合計時間
+    \end{block}
+    \begin{block}{$\mathcal{I}_{k, i}-\mathcal{I}_{k, i}^{\mathcal{P}}-\mathcal{I}_{k, i}^{\mathcal{E}}$}
+        $\mathcal{I}_{k, i}^{\mathcal{P}}$, $\mathcal{I}_{k, i}^{\mathcal{E}}$以外の $\mathcal{C}_{k}$ から $c_{i}$ への干渉作業
+    \end{block}
 \end{frame}
 
 \begin{frame}{$\mathcal{I}_{k, i}^{\mathcal{B}}$}
-    \begin{itemize}
-        \item \desc{$\mathcal{I}_{k, i}^{\mathcal{B}}$}{\\$c_{i}$ がブロックされているかどうかに関係なく, $c_{i}$ と同じmutually exclusive コールバックグループに属す $\mathcal{C}_{k}$ のコールバックインスタンスが $\left[r_{i}, s_{i}\right)$ に実行された時間の総和}
-        \item 自明に, $\mathcal{I}_{k, i}^{\mathcal{P}} \leq$  $\mathcal{I}_{k, i}^{\mathcal{B}}$
-    \end{itemize}
+    \begin{block}{$\mathcal{I}_{k, i}^{\mathcal{B}}$}
+        $c_{i}$ がブロックされているかどうかに関係なく, $c_{i}$ と同じmutually exclusive コールバックグループに属す $\mathcal{C}_{k}$ のコールバックインスタンスが $\left[r_{i}, s_{i}\right)$ に実行された時間の総和
+    \end{block}
+    \vspace{5mm}
+    自明に, $\mathcal{I}_{k, i}^{\mathcal{P}} \leq$  $\mathcal{I}_{k, i}^{\mathcal{B}}$
 \end{frame}
 
 \begin{frame}{$c_{i}$ がreentrant コールバックグループに属している場合の干渉作業}
@@ -182,18 +168,17 @@
 \subsection{An upper bound of response time}
 \label{ssec: an_upper_bound_of_response_time}
 
-\begin{frame}{}
+\begin{frame}{最悪応答時間を得るための方針}
     \begin{itemize}
         \item \hlink{lemma2}{Lemma 2} によると, $R(J)$ の上界のためには, $J$ の問題ウィンドウ内の各干渉チェーン $\mathcal{C}_{k}$ に関して $\mathcal{Q}_{k}$ の上界が必要
         \item $\mathcal{Q}_{k}$ の単純な上界は, $\mathcal{I}_{k, i}^{\mathcal{E}}=0$ を考慮し, $\sum_{i=1}^{|\mathcal{C}|} \mathcal{I}_{k, i}$ と $\sum_{i=1}^{|\mathcal{C}|} \mathcal{I}_{k, i}^{\mathcal{B}}$ の上界を別々に検討することで取得できる
+        \item $\sum_{i=1}^{|\mathcal{C}|} \mathcal{I}_{k, i}$, すなわち $\mathcal{I}_{k}$ を制限するために, 各干渉チェーン $\mathcal{C}_{k}$ が $J$ の問題ウィンドウで実行できる最大合計時間を計算する
     \end{itemize}
 \end{frame}
 
 \begin{frame}[label=lemma3]{Lemma 3}
-    $\sum_{i=1}^{|\mathcal{C}|} \mathcal{I}_{k, i}$, つまり $\mathcal{I}_{k}$ を制限するために, 各干渉チェーン $\mathcal{C}_{k}$ が $J$ の問題ウィンドウで実行できる最大合計時間を計算する
-
     \begin{lemma}[]
-        長さ $L$ の $J$ の問題ウィンドウ以下の長さの時間ウィンドウで実行される可能性のある $\mathcal{C}_{k}$ のチェーンインスタンスの最大数 $n_{k}(L)$ は, $n_{k}(L)=$  $\left\lceil\frac{L-E_{k}}{T_{k}}\right\rceil+1$ である
+        長さ $L$ の $J$ の問題ウィンドウ以下の長さの時間ウィンドウで実行される可能性のある $\mathcal{C}_{k}$ のチェーンインスタンスの最大数は, $n_{k}(L)=$  $\left\lceil\frac{L-E_{k}}{T_{k}}\right\rceil+1$ である
     \end{lemma}
 \end{frame}
 
@@ -208,7 +193,7 @@
     \begin{lemma}[]
         \setlength{\linewidth}{0.98\columnwidth}
         \begin{itemize}
-            \item 長さ $L$ の $J$ の問題ウィンドウ以下の長さの時間ウィンドウで $\mathcal{C}_{k}$ が実行される可能性のある合計時間は, $L \leq E_{k}$ の場合は $L$ によって上界が決まり, それ以外の場合は $W_{k}(L)$ によって上界が決まる
+            \item 長さ $L$ の $J$ の問題ウィンドウ以下の長さの時間ウィンドウで $\mathcal{C}_{k}$ が実行される可能性のある合計時間は, $L \leq E_{k}$ の場合 $L$ によって上界が決まり, それ以外の場合は $W_{k}(L)$ によって上界が決まる
             \item ここで, $W_{k}(L)$は以下
                   \begin{equation*}
                       W_{k}(L)=\left(n_{k}(L)-1\right) E_{k}+\min \left\{\left(L-E_{k}\right) \bmod T_{k}, E_{k}\right\}
@@ -243,10 +228,10 @@
     \begin{itemize}
         \item \hlink{theorem1}{Theorem 1} の境界は悲観的である可能性がある
         \item 理由は以下２つ
-        \begin{itemize}
-            \item $J$ 内の各コールバックインスタンスへのサブ干渉シーケンスが重複しないようにする必要があるため, $J$ 内のコールバックと同じmutually exclusiveグループに属す全てのコールバックインスタンスが $\sum_{i=1}^{|\mathcal{C}|} \mathcal{I}_{k, i}^{\mathcal{B}}$ に寄与できるわけではない
-            \item ROS 2 スケジューリングポリシーでは, ready のコールバックインスタンスがすぐに $\Omega$ に追加されない可能性があるため, $J$ の問題ウィンドウ中にリリースされた $\mathcal{C}_{k}$ からの一部のコールバックインスタンスが $J$ に干渉しない可能性がある
-        \end{itemize}
+              \begin{itemize}
+                  \item $J$ 内の各コールバックインスタンスへのサブ干渉シーケンスが重複しないようにする必要があるため, $J$ 内のコールバックと同じmutually exclusiveグループに属す全てのコールバックインスタンスが $\sum_{i=1}^{|\mathcal{C}|} \mathcal{I}_{k, i}^{\mathcal{B}}$ に寄与できるわけではない
+                  \item ROS 2 スケジューリングポリシーでは, ready のコールバックインスタンスがすぐに $\Omega$ に追加されない可能性があるため, $J$ の問題ウィンドウ中にリリースされた $\mathcal{C}_{k}$ からの一部のコールバックインスタンスが $J$ に干渉しない可能性がある
+              \end{itemize}
     \end{itemize}
 \end{frame}
 
@@ -254,10 +239,10 @@
     \begin{itemize}
         \item $\mathcal{C}_{k}$ の 3 つの連続するコールバックインスタンス $c_{k, j}^{p}, c_{k, j+1}^{p}, c_{k, j+2}^{p}$ を考える
         \item $c_{k, j}$ と $c_{k, j+2}$ は $c_{i}$ と同じコールバックグループに属し, $c_{k, j+1}$ は $c_{i}$ とは異なる $c_{i+1}$ と同じコールバックグループに属す
-        \item $\left[r_{i}, s_{i}\right)$ 中に $c_{k, j}^{p}$ と $c_{k, j+2}^{p}$ の両方が実行される場合, $\left[r_{i+1}, s_{i+1}\right)$ 中に $c_{k, j+1}^{p}$ を実行することはできない
+        \item $\left[r_{i}, s_{i}\right)$ 中に $c_{k, j}^{p}$ と $c_{k, j+2}^{p}$ の両方が実行される場合, $\left[r_{i+1}, s_{i+1}\right)$ 中に $c_{k, j+1}^{p}$ を実行できない
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{今後の分析方針}
     これらの観察に基づいて, 次に $\mathcal{Q}_{k}$ の上界をより正確に分析し, $R(J)$ のより厳密な上界を導き出す
 \end{frame}
