--- a/bibtex/master_reference.bib
+++ b/bibtex/master_reference.bib
@@ -1,3 +1,11 @@
+@inproceedings{emberson2010techniques,
+  title={Techniques for the synthesis of multiprocessor tasksets},
+  author={Emberson, Paul and Stafford, Roger and Davis, Robert I},
+  booktitle={proceedings 1st International Workshop on Analysis Tools and Methodologies for Embedded and Real-time Systems (WATERS 2010)},
+  pages={6--11},
+  year={2010}
+}
+
 @inproceedings{suzuki2018real,
   title={Real-Time {ROS} extension on transparent {CPU/GPU} coordination mechanism},
   author={Suzuki, Yuhei and Azumi, Takuya and Kato, Shinpei and Nishio, Nobuhiko},
