--- a/template.tex
+++ b/template.tex
@@ -31,12 +31,11 @@
 
 \lastpage
 
-\section*{Appendix}
-% Reference
-% \begin{frame}[allowframebreaks]{Reference}
-%     \beamertemplatetextbibitems
-%     \bibliographystyle{unsrt}
-%     \bibliography{\beamerDir/bibtex/master_reference}
-% \end{frame}
+\section*{Reference}
+\begin{frame}[allowframebreaks]{Reference}
+    \beamertemplatetextbibitems
+    \bibliographystyle{unsrt}
+    \bibliography{\beamerDir/bibtex/master_reference}
+\end{frame}
 
 \end{document}
